# inspur-bios-code-mgmt

./: .gitignore  Makefile.am  README.md  activation.cpp  activation.hpp  bios-update  configure.ac  generate-tar  images.hpp  inspur-bios-code-mgmt.service  inspur-bios-code-mgmt.service.in  inspur-bios-code-mgmt@.service.in  inspur-bios-generate-tar  inspur-bios-updater-sh  inspur-bios-updater.service  inspur-bios-updater.service.in  item_updater.cpp  item_updater.hpp  version.cpp  version.hpp
static/: Makefile.am.include  flash.cpp
